--- a/FinalProject/Aitkin_EDA_code.ipynb
+++ b/FinalProject/Aitkin_EDA_code.ipynb
@@ -122,10 +122,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#am rush hour dataframe\n",
+    "#am rush hour dataframe: 8 am to 9:30. 8 am is when most of the data is collected\n",
     "mask = ((df4.just_time >= datetime.time(8)) & (df4.just_time <= datetime.time(9, 30)))\n",
     "df_am = df4[mask].copy()\n",
-    "\n"
+    "\n",
+    "# mask for evening rush hours: 5 pm to 8 pm. 8 pm because that's when most of \n",
+    "# the data is collected\n",
+    "mask = ((df4.just_time >= datetime.time(17)) & (df4.just_time <= datetime.time(20)))\n",
+    "df_pm = df4[mask].copy()\n"
    ]
   },
   {
@@ -154,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,19 +180,6 @@
     "#Mean is probably an outlier. Use graph to demonstrate why don't use Journal Square\n",
     "# can reuse this code and change station name to check for other outliers;\n",
     "# will not include the code everytime its used"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# mask for evening rush hours: 5 pm to 8 pm. 8 pm because that's when most of \n",
-    "# the data is collected\n",
-    "mask = ((df4.just_time >= datetime.time(17)) & (df4.just_time <= datetime.time(20)))\n",
-    "df_pm = df4[mask].copy()\n",
-    "\n"
    ]
   },
   {
@@ -262,7 +253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# test the noon exits to see if more accurate than 8-9:30\n",
+    "# test the noon exits to see if capture more riders than 8-9:30\n",
     "mask = ((df4.just_time >= datetime.time(11, 30)) & (df4.just_time <= datetime.time(12)))\n",
     "df_noon = df4[mask].copy()\n",
     "\n",
@@ -283,7 +274,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The morning entries probably most accurate. Make a pretty graph of them\n",
+    "# The morning entries higher numbers. Make a pretty graph of them\n",
     "mm = sns.barplot(x=station_am_all_entry['STATION'][:20], y=station_am_all_entry['entries_diffs'][:20],ci = None)\n",
     "mm.set_xticklabels(mm.get_xticklabels(), \n",
     "                          rotation=90);\n",
@@ -307,13 +298,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# collect the top 20 entries and exits in the four groups and find best ones\n",
+    "# collect the top 20 entries and exits in the four groups \n",
     "aa= station_am_all_entry[['STATION','entries_diffs']][:20] # AM ENTRY\n",
     "bb= station_am_all_exit[['STATION','exits_diffs']][:20]    # AM EXIT\n",
     "cc=station_pm_all_eentry[['STATION','entries_diffs']][:20] # PM ENTRY\n",
     "dd = station_pm_all_exit[['STATION','exits_diffs']][:20]   # PM EXIT\n",
     "\n",
-    "# rename the columns so can combine all four arrays\n",
+    "# rename the columns so can combine all four arrays into one\n",
     "aa.rename(columns = {'entries_diffs':'diffs'}, inplace = True)\n",
     "bb.rename(columns = {'exits_diffs':'diffs'}, inplace = True) \n",
     "cc.rename(columns = {'entries_diffs':'diffs'}, inplace = True)\n",
@@ -323,8 +314,9 @@
     "ff = pd.DataFrame(ee)\n",
     "ff.sort_values(1,ascending= False,inplace = True)\n",
     "# drop duplicates\n",
-    "ff.drop_duplicates(0)\n",
-    "# print out and copy to PowerPoint"
+    "gg=ff.drop_duplicates(0)\n",
+    "# export table to Excel\n",
+    "gg.to_excel(r'highestStations.xlsx', index = False)"
    ]
   },
   {
@@ -358,9 +350,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:metis] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-metis-py"
   },
   "language_info": {
    "codemirror_mode": {
